Add the rest of the content Fix some issues with rendering

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,15 +1,13 @@
 
 [general]
 
-project     = My Public Info Project
-version     = 1.0
-release     = 1.0.0
-t3author    = My Name
-copyright   = since 1999 by the author
+project     = TYPO3 Frontend Editing'
+version     = 0.1.0
+release     = 0.1.0
+t3author    = Pixelant
+copyright   = since 2105 by the author
 
-description = This is a short description
-   of what it's all about.
-   It should not be more than a few sentences.
+description = This package gives frontend editing capability to TYPO3 CMS.
 
 
 ; defaults:
