--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,7 +1,7 @@
 
 [general]
 
-project     = TYPO3 Frontend Editing'
+project     = TYPO3 Frontend Editing
 version     = 0.1.0
 release     = 0.1.0
 t3author    = Pixelant
