--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -1,15 +1,21 @@
+# This is the project specific Settings.yml file.
+# Place Sphinx specific build information here.
+# Settings given here will replace the settings of 'conf.py'.
+
+---
 conf.py:
-  copyright: 2015-2017
+  copyright: 2017
   project: TYPO3 Frontend Editing
   version: 0.1
   release: 0.1.0
   latex_documents:
   - - Index
-    - sphinx.tex
-    - Sphinx Python Documentation Generator and Viewer
-    - Xavier Perseguers
+    - frontend_editing.tex
+    - TYPO3 Frontend Editing
+    - Pixelant
     - manual
   latex_elements:
     papersize: a4paper
     pointsize: 10pt
     preamble: \usepackage{typo3}
+...
